# ads2gephi

./: .gitignore  .travis.yml  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: github-ci.yml
ads2gephi/: ads2gephi.py  ads2gephi_old.py  cli.py
tests/: test_ads2gephi.py  test_ads2gephi_old.py
