[tool.poetry]
name = "ads2gephi"
version = "0.1.1"
description = "A command line tool for querying and modeling citation networks from the Astrophysical Data System (ADS) in a format compatible with Gephi"
authors = ["Theo Costea <theo.costea@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/03b8/ads2gephi"
keywords = ["citation network", "network analysis", "astrophysical data system"]

[tool.poetry.dependencies]
python = "^3.6"
ads = "^0.12.3"
igraph = "^0.1.11"
sqlalchemy = "^1.3"
configparser = "^3.7"
click = "^7.0"
pytest = "^5.0"
hypothesis = "^4.28"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
ads2gephi = 'ads2gephi.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

