[tool.poetry]
name = "ads2gephi"
version = "0.2.2"
description = "A command line tool for querying and modeling citation networks from the Astrophysical Data System (ADS) in a format compatible with Gephi"
authors = ["Theo Costea <theo.costea@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/03b8/ads2gephi"
keywords = ["citation network", "network analysis", "astrophysical data system"]

[tool.poetry.dependencies]
python = ">=3.5"
ads = "^0.12.3"
sqlalchemy = "^1.3"
configparser = "^3.7"
click = "^7.0"
python-igraph = "^0.7.1"
tqdm = "^4.32"
yaspin = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.0"

[tool.poetry.scripts]
ads2gephi = 'ads2gephi.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

